--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.14"
   }
 }
