--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
